--- a/COELOPH/public/assets/css/addtocart.css
+++ b/COELOPH/public/assets/css/addtocart.css
@@ -1,233 +1,214 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins';
-    font-size: 18px;
-    color: #eee;
-  }
-  
-  body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  
-  }
-  
-  .header {
-    height: 80px;
-    width: 70%;
-    background-color: #1D1d;
-    border-radius: 3px;
-    margin: 30px 0px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px;
-  }
-  
-  .header .logo {
-    font-family: Poppins;
-    font-size: 30px;
-    font-weight: bold;
-    color: goldenrod;
-  }
-  
-  .header ul {
-    display: flex;
-    list-style: none;
-    
-  }
-  
-  .header ul li a {
-    text-decoration: none;
-    font-size: 18px;
-    color: white;
-    padding: 7px 15px;
-  }
-  
-  .cart {
-    display: flex;
-    background-color: white;
-    justify-content: space-between;
-    align-items: center;
-    padding: 7px 10px;
-    border-radius: 3px;
-    width: 80px;
-  }
-  
-  .fa-solid {
-    color: rgb(255, 183, 0);
-  }
-  
-  .cart p {
-    height: 22px;
-    width: 22px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 22px;
-    background-color: rgb(255, 183, 0);
-    color: white;
-  }
-  
-  .container {
-    display: flex;
-    width: 70%;
-    margin-bottom: 30px;
-    margin-top: 30px;
-  }
-  
-  #root {
-    width: 60%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-  }
-  
-  .sidebar {
-    width: 40%;
-    border-radius: 10px;
-    background-color: #eee;
-    border: 5px solid rgb(32, 218, 141);
-    margin-left: 20px;
-    padding: 15px;
-    text-align: center;
-  }
-  
-  .head {
-    background-color: goldenrod;
-    border-radius: 10px;
-    height: 40px;
-    padding: 10px;
-    margin-bottom: 20px;
-    color: rgb(0, 0, 0);
-    display: CENTER;
-    align-items: center;
-    
-  }
-  
-  .foot {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 0px;
-    padding: 10px 0px;
-    border-top: 1px solid #333;
-    
-  }
-  
-  .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    border: 5px solid rgb(32, 218, 141);
-    border-radius: 5px;
-    padding: 15px;
-  }
-  
-  .img-box {
-    width: 100%;
-    height: 180px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .images {
-    max-width: 90%;
-    max-height: 90%;
-    object-fit: cover;
-    object-position: center;
-  }
-  
-  .bottom {
-    margin-top: 20px;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 110px;
-  }
-  
-  h2 {
-    font-size: 20px;
-    color: red;
-  }
-  
-  button {
-    width: 80%;
-    position: relative;
-    border: none;
-    border-radius: 10px;
-    background-color: rgb(224, 165, 14);
-    padding: 5px 20px;
-    cursor: pointer;
-    color: rgb(0, 0, 0);
-  }
-  
-  button:hover {
-    background-color: #f7e600;
-  }
-  
-  .cart-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: rgb(255, 255, 255);
-    border-bottom: 1px solid #ffffff;
-    border-radius: 10px;
-    margin: 10px 10px;
-  }
-  
-  .row-img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    border: 1px solid goldenrod;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .rowimg {
-    max-width: 43px;
-    max-height: 43px;
-    border-radius: 50%;
-  }
-  
-  .fa-trash:hover {
-    cursor: pointer;
-    color: #333;
-  }
-  
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
+  font-size: 18px;
+}
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.header{
+  height: 80px;
+  width: 70%;
+  background-color: #1A2634;
+  border-radius: 3px;
+  margin: 30px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+.header .logo{
+  font-family: Poppins;
+  font-size: 30px;
+  font-weight: bold;
+  color: goldenrod;
+}
+.header{
+  font-size: 30;
+  font-weight: bold;
+  color: white;
+}
+.header ul{
+  display: flex;
+  list-style: none;
+}
+.header ul li a{
+  text-decoration: none;
+  font-size: 18px;
+  color: white;
+  padding: 7px 15px;
 
-  .sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+}
+
+
+.cart{
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px 10px;
+  border-radius: 3px;
+  width: 80px;
+}
+.fa-solid{
+  color: rgb(255, 183, 0);
+}
+.cart p{
+  height: 22px;
+  width: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 22px;
+  background-color: rgb(255, 183, 0);
+  color: black;
+  margin-top: 20px;
+}
+.container{
+  display: flex;
+  width: 70%;
+  margin-bottom: 30px;
+}
+#root{
+  width: 60%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  margin-top: 20px;
+}
+.sidebar{
+  width: 40%;
+  border-radius: 5px;
+  background-color: #eee;
+  margin-left: 20px;
+  padding: 15px;
+  text-align: center;
+}
+.head{
+  background-color: goldenrod;
+  border-radius: 3px;
+  height: 40px;
+  padding: 10px;
+  margin-bottom: 20px;
+  color: black;
+  display: flex;
+  align-items: center;
+  
+}
+.foot{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0px;
+  padding: 10px 0px;
+  border-top: 1px solid #333;
+}
+.box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid goldenrod;
+  border-radius: 5px;
+  padding: 15px;
+}
+.img-box{
+  width: 100%;
+  height: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.images{
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: cover;
+  object-position: center;
+}
+.bottom{
+  margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 110px;
+}
+h2{
+  font-size: 20px;
+  color: red;
+}
+button{
+  width: 100%;
+  position: relative;
+  border: none;
+  border-radius: 5px;
+  background-color: goldenrod;
+  padding: 7px 25px;
+  cursor: pointer;
+  color: black;
+}
+button:hover{
+  background-color: #333;
+}
+.cart-item{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: white;
+  border-bottom: 1px solid #aaa;
+  border-radius: 3px;
+  margin: 10px 10px;
+}
+.row-img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  border: 1px solid goldenrod;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rowimg{
+  max-width: 43px;
+  max-height: 43px;
+  border-radius: 50%;
+}
+.fa-trash:hover{
+  cursor: pointer;
+  color: #333;
+}
+
+
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .foot {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
 }
 
 .foot h3, .foot h2 {
-    margin: 0;
-    padding: 5px 0;
+  margin: 0;
+  padding: 5px 0;
 }
 
 .btn-primary {
-    margin-top: 10px;
-    font-size: 16px; /* Adjust the font size */
-    padding: 10px 20px; /* Adjust the padding */
-    width: 100%; /* Make button full width for better alignment */
+  margin-top: 10px;
+  font-size: 16px; /* Adjust the font size */
+  padding: 10px 20px; /* Adjust the padding */
+  width: 100%; /* Make button full width for better alignment */
 }
